--- a/Frontend/gallstone/package.json
+++ b/Frontend/gallstone/package.json
@@ -18,6 +18,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "resend": "^6.0.2",
     "sonner": "^2.0.7"
   },
